--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,10 @@ dependencies:
     sdk: flutter
 
   assets:
-   - assets\C:Usersjmorr\OneDrive\Desktop\Flutter projects\boook\android\bookworm.jpg
-
-
-
+    - assets\C:Usersjmorr\OneDrive\Desktop\Flutter projects\boook\android\bookworm.jpg
+    - assets/C:/Users/jmorr/OneDrive/Desktop/Flutter projects/boook/android/book1.jpg
+    - assets/C:/Users/jmorr/OneDrive/Desktop/Flutter projects/boook/android/book2.jpg
+    - assets/C:/Users/jmorr/OneDrive/Desktop/Flutter projects/boook/android/book3.jpg
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
